# rts

./: .gitattributes  .gitignore  AGENT.md  BLOG_POST.md  BUILD_FEATURE.md  CLAUDE.md  CURRENT.md  Cargo.toml  FEATURES.MD  INTRO.md  NEXT_STEPS.md  PASSO_1.md  PASSO_2.md  PASSO_3.md  PASSO_4.md  PASSO_5.md  PASSO_6.md  PASSO_7.md  PROJECT_MAP.md  PROJECT_PLAN.md  README.md  ROAD_MAP.md  build.rs  builtin_formulary.md  jitrs_remove.md  package.json  rts.d.ts  test_window.ts  time_test.ts  tsconfig.json
.claude/: settings.local.json
.github/workflows/: build-artifacts.yml  rts-test.yml  rust-test.yml  types-lint.yml
bench/: bench_bun_vs_rts.ps1  benchmark.ps1  bun_simple.ts  monte_carlo_pi.js  monte_carlo_pi.ts  monte_carlo_pi_native_rand.js  pi_bigfloat.js  pi_bigfloat.ts  pi_machin.ts  rts_simple.ts
builtin/globals/: package.json
builtin/http/: package.json
builtin/rts-types/: JSON.d.ts  gc.d.ts  globals.d.ts  package.json  promise.d.ts  rts.d.ts  str.d.ts  test.d.ts
docs/: gc-arena-explications.md
docs/specs/: INDEX.md  app-features.md  multi-thread-implicito.md  namespace-creation-guide.md  net-namespace.md  perf-hot-path-optimization.md  rtslib-external-namespaces.md  silent-parallelism.md
examples/: bench_simple.ts  class_callback_this.ts  class_counter_full.ts  class_instance_basic.ts  class_instance_method.ts  class_instance_update.ts  class_method_static.ts  class_with_ctor.ts  console.ts  cpu_benchmark.ts  generic_stack.ts  global_buffer_promise.ts  hello_world.ts  http_client.ts  http_hello.ts  http_server.ts  http_unified.ts  https_client.ts  json_all_types.ts  json_array_test.ts  json_basic.ts  json_nested.ts  monte_carlo_pi.ts  monte_carlo_pi_threaded.ts  parallel_purity.ts  parallel_sum.ts  poc_toolkit.ts  reflection.ts  stress_gc_handles.ts  string_concat_basic.ts  string_concat_num.ts  string_concat_param.ts  string_length.ts  string_method_aliases.ts  string_replace_all.ts  string_str_namespace.ts  thread_factory.ts  vec3_overload.ts  window.ts
examples/hello/: main.ts  package.json
examples/mixed/: main.ts  (+1 more)
src/: cache.rs  compile_options.rs  dotenv.rs  lib.rs  main.rs  pipeline.rs  runtime_lib.rs  runtime_objects.rs
tests/: _net_echo_server.ts  abstract_chain.test.ts  abstract_class_basic.test.ts  abstract_class_no_new_err.test.ts  abstract_missing_impl_err.test.ts  alloc_basic.test.ts  alloc_realloc.test.ts  arithmetic.test.ts  array_native_methods.test.ts  arrow_capture_local.test.ts  arrow_functions.test.ts  arrow_lift_return.test.ts  async_arrow.test.ts  async_basic.test.ts  async_chain.test.ts  async_class.test.ts  async_generator.test.ts  async_promise_combinators.test.ts  async_toplevel_await.test.ts  async_try_catch_no_throw.test.ts  atob_btoa.test.ts  atomic_basic.test.ts  backtrace_basic.test.ts  backtrace_disabled.test.ts  bitwise_ops.test.ts  buffer_equals_indexof.test.ts  catch_error_message.test.ts  class_basic.test.ts  class_extras.test.ts  class_flat_dispatch.test.ts  class_flat_layout.test.ts  class_inheritance.test.ts  class_private_methods.test.ts  class_static_fields.test.ts  class_static_init.test.ts  class_virtual_dispatch.test.ts  closure_local_capture.test.ts  closure_local_multi.test.ts  closure_local_param.test.ts  closure_nested.test.ts  (+225 more)
(+668 files in other folders)
