[package]
name = "rts"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow = "1.0"
object = { version = "0.39", default-features = false, features = ["write", "read", "std", "coff", "elf", "macho", "pe"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", default-features = true }
cranelift-codegen = "0.124"
cranelift-frontend = "0.124"
cranelift-jit = "0.124"
cranelift-module = "0.124"
cranelift-native = "0.124"
cranelift-object = "0.124"
rayon = "1.10"
sha2 = "0.10"
flate2 = "1.1"
tar = "0.4"
target-lexicon = "0.13"
colored = "2.1"
console = "0.15"
swc_common = "21.0.0"
swc_ecma_ast = "23.0.0"
swc_ecma_parser = "38.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
