[package]
name = "rts"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "rts"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
object = { version = "0.39", default-features = false, features = ["write", "read", "std", "coff", "elf", "macho", "pe"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", default-features = true }
cranelift-codegen = "0.131"
cranelift-frontend = "0.131"
cranelift-jit = "0.131"
cranelift-module = "0.131"
cranelift-native = "0.131"
cranelift-object = "0.131"
rayon = "1.10"
sha2 = "0.10"
flate2 = "1.1"
tar = "0.4"
target-lexicon = "0.13"
colored = "2.1"
console = "0.15"
indicatif = "0.18"
xwin = "0.9"
swc_common = "21.0.1"
swc_ecma_ast = "23.0.0"
swc_ecma_parser = "39.0.0"
gc-arena = "0.5"
rustc-hash = "1.1"
notify = "6.1"
fltk = { version = "1", features = ["fltk-bundled"] }
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "0.26"
indexmap = "2.14.0"

[build-dependencies]
fltk = { version = "1", features = ["fltk-bundled"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
